@@ -4,12 +4,15 @@ Changelog
 1.1 - Unreleased
 ----------------
 
+- Add basic migration for new LRF type including a test.
+  [saily]
+
 - Add translation: widget missing
 - Translating folder with default_page: menu items added
 - Add translation: display of default pages of folders
   [ksuess]
 
-- Bugfix: p.a.contentmenu fails if access to translation is not permitted. 
+- Bugfix: p.a.contentmenu fails if access to translation is not permitted.
   Solution: Introduce restricted access and use it in vocabulary for menu.
   [jensens]
 
